rust/fleet-waves/src/snapshots/fleet_waves__tests__stale_tick_renders_ios_page.snap
---
source: fleet-waves/src/ios_page_design.rs
expression: "render_page(IosPageDesign::stale_demo())"
---
"                                                                                                    "
"  ╭ WAVES ───────────────────────────────────────────────────────────────────────────────────────╮  "
"  │◆ iOS PAGE DESIGN                                                                             │  "
"  │spawn timeline                                                   ◖ ● stale · tick 128 · lag 6◗│  "
"  │iOS bg · live refresh · handoff cues                                                          │  "
"  │◖ ● done    ◗ ◖ ● active  ◗ ◖ ● queued  ◗ ◖ ● blocked ◗                                       │  "
"  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  "
"                                                                                                    "
"  ╭ SPAWN TIMELINE ──────────────────────────────────────────────────────────────────────────────╮  "
"  │W1   seed plan graph                                                             ◖ ● done    ◗│  "
"  │  • graph sealed and ready for handoff                                                        │  "
"  │W2   spawn page polish                                                           ◖ ● active  ◗│  "
"  │  • blue lane spawning now                                                                    │  "
"  │W3   review queue                                                                ◖ ● queued  ◗│  "
"  │  • waiting for the next refresh                                                              │  "
"  │W4   merge gate                                                                  ◖ ● blocked ◗│  "
"  │  • needs a clean approval tick                                                               │  "
"  │                                                                                              │  "
"  │                                                                                              │  "
"  │                                                                                              │  "
"  │                                                                                              │  "
"  │                                                                                              │  "
"  │                                                                                              │  "
"  │                                                                                              │  "
"  │                                                                                              │  "
"  │                                                                                              │  "
"  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  "
"                                                                                                    "
